[backend] Get place images
